Réécriture de la partie sur les big functors (encore des changements nécessaires)

--- a/biblio.bib
+++ b/biblio.bib
@@ -8,6 +8,7 @@
 
 @manual{cppspec,
   title={Working Draft, Standard for Programming Language C++},
+  year={2012},
   note={http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2012/n3337.pdf}
 }
 
@@ -160,6 +161,7 @@
   title={The Java\textregistered Language Specification},
   author={James Gosling and Bill Joy and Guy Steele and Gilad Bracha and Alex
                   Buckley},
+  year={2014},
   misc={http://docs.oracle.com/javase/specs/jls/se8/jls8.pdf}
 }
 
@@ -213,4 +215,11 @@
   year={2012},
   title={Proposal for namespaces},
   note={url??}
+}
+
+@misc{lefessant-bigfunctors,
+  author={Fabrice Le Fessant},
+  year={2011},
+  title={Packing and Functors},
+  note={http://www.ocamlpro.com/blog/2011/08/10/ocaml-pack-functors.html}
 }
